--- a/scr/css/pagina.css
+++ b/scr/css/pagina.css
@@ -1,7 +1,7 @@
 #pagina{
     display: grid;
     place-items: center;
-    height: 100vh;
+    height: auto;
     padding-top: 10vw;
     background-color: white;
     grid-template-areas: 
