--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -1,9 +1,7 @@
 body{
     width: 100%;
     height: auto;
-    display: flex;
-    flex-direction: column;
-
+    display: block;
 }
 
 #header{
@@ -43,7 +41,7 @@ body{
    background-color: rgba(181, 213, 242, 0.765);
    width: 100%;
    height: 100vh;
-   /* padding-left: 50px; */
+   padding-left: 50px;
 }
     .topo-texto{
         display: flex;
@@ -92,21 +90,37 @@ body{
 }
 
 /*  Ready To Build Your Community? */
+/* Rodape */
 #try-free-footer{
-    width:20vw ;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    top: 10vh;
+    margin-left: auto;
+    margin-right: auto;
+    width:40vw ;
     height: 20vh;
-    border: 1px solid black;
+    border:none;
+    border-radius: 10px;
+    box-shadow: 1px 2px 10px  rgba(155, 154, 154, 0.614);
     text-align: center;
     background-color: white;
 }
     #try-free-footer h4{
     font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 2rem;
     }
     #try-free-footer button{
-        width: 10vw;
+        width: 30vw;
         height: 8vh;
         border-radius: 50px;
-        background-color: hsla(322, 100%, 79%, 0.806);
+        border: none;
+        background-color: hsl(322, 75%, 63%);
+        box-shadow:1px 2px 10px  rgba(155, 154, 154, 0.814);
+        margin-left: auto;
+        margin-right: auto;
     }
         #try-free-footer button a{
             text-decoration: none;
@@ -117,8 +131,13 @@ body{
 
 footer{
     display: flex;
-    top: 10%;
+
     width: 100vw;
     height:20vh ;
     background-color: hsl(192, 100%, 9%);
 }
+
+    .rodape-img img {
+   
+    width: auto;
+    }
