--- a/scr/css/pagina.css
+++ b/scr/css/pagina.css
@@ -1,7 +1,6 @@
 #pagina{
     display: grid;
     place-items: center;
-    height: auto;
     padding-top: 10vw;
     background-color: white;
     grid-template-areas: 
@@ -9,21 +8,22 @@
     "pagina-2"
     "pagina-3"
     ;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    /* padding-left: 5vw;
+    padding-right: 5vw; */
 
 }
     .container-1{
         display: flex;
-        width: 100%;
+        width: 90vw;
         flex-direction: row;
         border: 2px solid hsla(0, 0%, 45%, 0.248);
         grid-area: pagina-1;
     }
 
             .container-infor{
-                display: flex;
-                flex-direction: column;
+    
+                /* display: flex;
+                flex-direction: column; */
                 width: 50%;
                 padding-top: 10rem;
                 padding-left: 10rem;
@@ -39,22 +39,27 @@
                     width: 15vw;
                 }
     .container-img img{
-        width: 80%;
+        width: 100%;
+        height: 100%;
     }
 
 .container-2{
-    display: flex;
-    flex-direction: row-reverse;
-    width: 100%;
+    display: grid;
+    grid-template-areas: "container-2-img container-2-infor";
+    /* display: flex;
+    flex-direction: row-reverse; */
+    width: 90vw;
     border: 1px solid hsla(0, 0%, 45%, 0.248);
     margin-top: 2rem;
     grid-area: pagina-2;
 } 
     .container-2-infor{
+        grid-area: container-2-infor;
         display: flex;
         flex-direction: column;
-        width: 50%;
-        padding-left: 10rem;
+        flex-flow: column;
+        padding-left: 1rem;
+        padding-right: 2rem;
         align-self: center;
     }
         .container-2-infor h3{
@@ -64,18 +69,21 @@
         }
         .container-2-infor p{
             font-size:18px ;
-            width: 27rem;
+            width: 30rem auto;
             text-align: justify;
             color: silver;
         }
+    .container-2-img{
+        grid-area:container-2-img;
+    }
     .container-2-img img{
-        width: 80%;
+        width: 100%;
     }
 
 .container-3{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 90vw;
     border: 1px solid  hsla(0, 0%, 45%, 0.248);
     align-items: center;
     margin-top: 2rem;
@@ -96,4 +104,7 @@
             width: 27rem;
             text-align: justify;
             color: silver;
+        }
+        .container-3-img img{
+            width: 100%;
         }
