--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -1,74 +1,83 @@
 body{
     display: block;
-
 }
 
+html{
+    font-size: 18px;
+}
+/* Header */
 #header{
     display: flex;
     position: absolute;
     width:100%;
 }
+    /* Logo huddle */
     .logo{
+        left: 5vw;
         position: relative;
-        top: 5rem;
-        left: 5rem;
+        top: 5vh;
         width: 50vw;
     }
         .logo img{
-        width: 20vw;
         height: 5vh;
-        }
-        
+        width: 20rem;
+        }   
     .start-free{
-        display: flex;
-        width: 50vw;
-        height:10vh ;
-        padding-right: 1%;
-        padding-top: 2%;
-        justify-content: flex-end;
         align-items: center;
+        display: flex;
+        height:10vh ;
+        justify-content: flex-end;
+        padding-right: 5vw;
+        padding-top: 2vh;
+        width: 50vw;
 
     }
         .start-free button{
-            color: darkgray;
-            font-family: 'Merriweather', serif;
-            font-size: 18px;
-            text-shadow: 1px -1px black;
-            letter-spacing: 2px;
-            width: 17rem;
-            height: 5rem;
             border-radius: 50px;
             border: 1px solid rgba(158, 158, 158, 0.46);
             box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.086);
+            color: darkgray;
+            font-family: 'Merriweather', serif;
+            font-size: 18px;
+            height: 7vh;
+            letter-spacing: 2px;
+            text-shadow: 1px -1px black;
+            width: 15vw;
         }   
 
 
 #topo{
+   background-color: rgba(181, 213, 242, 0.765);
+   background-size: cover;
+   background: url(/scr/img/bg-hero-desktop.svg) ;
+   border: 1px solid black;
    display: flex;
    flex-direction: row;
-   background: url(/scr/img/bg-hero-desktop.svg)  ;
-   background-size: cover;
-   background-color: rgba(181, 213, 242, 0.765);
-   height: 100vh;
-   /* padding-left: 50px; */
+   flex-wrap: wrap;
+   gap: 15%;
+   height: 100%;
+   padding-bottom: 5rem;
+   padding-top: 5rem;
+   width: 100%;
 }
     .topo-texto{
-        display: flex;
-        flex-direction: column;
-        flex-flow: column wrap;
-        align-self: center;
         align-items: center;
-        width: 50vw;
-        padding-left:2rem ;
+        align-self: center;
+        display: flex;
+        width: 30%;
+        max-width: 50%;
+        flex-direction: column;
+        padding-left: 10vw;
         margin-top: 10rem;
     }  
         .topo-texto h1{
             font-family: 'Roboto', sans-serif;
-            font-size: 2rem;
+            font-size: 28px;
         }
         .topo-texto p{
-            width: 27rem;
-            text-align: justify;
+            color: rgb(38, 38, 38);
+            font-size: 24px;
+            /* width: auto; */
             margin-top: 2rem;
         }
         .topo-texto button{
@@ -86,15 +95,16 @@ body{
                 color: white;
             }
     .topo-design{
-        display: flex;
-        justify-content: center;
-        margin-top: 10rem;
-        margin-left: 15vw;
+        border: 1px solid black;
+        
+        margin-top: 4vw;
+        width: 50vw;
+    
     }
-    .topo-design img{
-        width: 100%;
-        height: 100%;
-    }
+        .topo-design img{
+            width: 100%;
+            height: 100%;
+        }
 
 /*  Ready To Build Your Community? */
 /* Rodape */
